--- a/MyBackEndProject/src/main/resources/application.properties
+++ b/MyBackEndProject/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #tomcat(by default works on 8080 port)
-server.port=8173
+server.port=8122
 
 #connection variables
 spring.datasource.url=jdbc:mysql://localhost:3306/team8_boot_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=6102075b
+spring.datasource.password=Password123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
